--- a/CSS/stylesheet1.css
+++ b/CSS/stylesheet1.css
@@ -9,7 +9,7 @@ background-color: #141519;
    color: #19fbff;
     font-size: 80px;
     margin: 30px auto;
-    width: 280px;
+    width: 100%;
     z-index: 1 ;
     top:5px;
     left:40%;
