--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -5,7 +5,7 @@ a{
     color:antiquewhite;
     text-decoration:none;
 }
-body{background-color: #5b7984;}
+body{background-color: #fff;}
 .screen1{
    display: flex;
    justify-content: center;
